test/tests/BadAnnotations.frost
@foo
@class
@private
@protected
@package
@class
@override
@implicit
@weak
@external
@pre(true)
@preOr(true)
@post(true)
@postAnd(true)
class Test {
}
